--- a/src/com/raven/crud/UsuariosAgregarBaseDatos.form
+++ b/src/com/raven/crud/UsuariosAgregarBaseDatos.form
@@ -28,18 +28,18 @@
                   <Component id="jLabel2" min="-2" pref="94" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="94" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jTextField7" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField6" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField5" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField4" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField3" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField2" alignment="0" pref="250" max="32767" attributes="0"/>
+                  <Component id="jTextField1" alignment="0" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="jTextField7" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField6" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField5" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField4" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField3" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField2" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
-                  <Component id="jTextField1" alignment="0" min="-2" pref="250" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="50" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
