--- a/src/com/raven/form/Usuarios_Form.form
+++ b/src/com/raven/form/Usuarios_Form.form
@@ -90,7 +90,7 @@
             <Component class="javax.swing.JTable" name="jTable">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="9" rowCount="0">
+                  <Table columnCount="10" rowCount="0">
                     <Column editable="true" title="Estado" type="java.lang.Boolean"/>
                     <Column editable="false" title="#" type="java.lang.Object"/>
                     <Column editable="false" title="Nombre" type="java.lang.Object"/>
@@ -100,10 +100,16 @@
                     <Column editable="false" title="N&#xb0; Whats App" type="java.lang.Object"/>
                     <Column editable="false" title="Localidad" type="java.lang.Object"/>
                     <Column editable="false" title="Direccion" type="java.lang.Object"/>
+                    <Column editable="false" title="Notas" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                       <Title/>
                       <Editor/>
